DRT-154 - removed header from report confirmation pages - changed report status confirmation messages - fixed confirmation details not being calculated correctly when trying to confirm another date - fixed confirmation message not being displayed correctly on mobile - improved layout on report confirmation pages

--- a/DailyReportWeb/Content/main.scss
+++ b/DailyReportWeb/Content/main.scss
@@ -370,6 +370,36 @@ div.disabled {
     }
 }
 
+[data-page='confirmIndividualDraft'] {
+
+    header {
+        display: none;
+    }
+
+    .main-logo {
+        margin-bottom: 80px;
+    }
+
+    .confirmation-result {
+        display: inline-block;
+    }
+}
+
+[data-page='confirmDraft'] {
+
+    header {
+        display: none;
+    }
+
+    .main-logo {
+        margin-bottom: 80px;
+    }
+
+    .confirmation-result {
+        display: inline-block;
+    }
+}
+
 @keyframes spin {
     from {
         transform: scale(1) rotate(0deg);
